burger is rendering but hardcoded

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import 'layouts/_header';
 @import 'layouts/_navigation';
 
+@import 'components/_burger';
 @import 'components/_ingredients';
 
 @import 'pages/_home';
