--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,27 @@ html {
   font-family: 'Open Sans', sans-serif;
   font-size: 66.25%; }
 
+.burger {
+  width: 100%;
+  margin: auto;
+  height: 25rem;
+  overflow: scroll;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.2rem; }
+  @media (min-width: 50rem) and (min-height: 40rem) {
+    .burger {
+      width: 35rem;
+      height: 30rem; } }
+  @media (min-width: 50rem) and (min-height: 41rem) {
+    .burger {
+      width: 45rem;
+      height: 40rem; } }
+  @media (min-width: 100rem) and (min-height: 70rem) {
+    .burger {
+      width: 70rem;
+      height: 60rem; } }
+
 .ingredients__bread--bottom {
   height: 13%;
   width: 80%;
